<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

<LinearLayout
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dietary_fibre"
        android:id="@+id/food_detail_dietary_fiber_name"
        android:layout_weight="0.50"
        android:gravity="right" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sample_content"
        android:id="@+id/food_detail_dietary_fiber_value"
        android:layout_weight="0.50"/>
</LinearLayout>

    <LinearLayout
        android:orientation="horizontal" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trans"
            android:id="@+id/food_detail_trans_name"
            android:layout_weight="0.50"
            android:gravity="right" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_content"
            android:id="@+id/food_detail_trans_value"
            android:layout_weight="0.50"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saturated"
            android:id="@+id/food_detail_saturated_name"
            android:layout_weight="0.50"
            android:gravity="right" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_content"
            android:id="@+id/food_detail_saturated_value"
            android:layout_weight="0.50"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_carbs"
            android:id="@+id/food_detail_total_carbs_name"
            android:layout_weight="0.50"
            android:gravity="right" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_content"
            android:id="@+id/food_detail_total_carbs_value"
            android:layout_weight="0.50"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sodium"
            android:id="@+id/food_detail_sodium_name"
            android:layout_weight="0.50"
            android:gravity="right" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_content"
            android:id="@+id/food_detail_sodium_value"
            android:layout_weight="0.50"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/potassium"
            android:id="@+id/food_detail_potassium_name"
            android:layout_weight="0.50"
            android:gravity="right" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_content"
            android:id="@+id/food_detail_potassium_value"
            android:layout_weight="0.50"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/polyunsaturated"
            android:id="@+id/food_detail_polyunsaturated_name"
            android:layout_weight="0.50"
            android:gravity="right" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_content"
            android:id="@+id/food_detail_polyunsaturated_value"
            android:layout_weight="0.50"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calories"
            android:id="@+id/food_detail_calories_name"
            android:layout_weight="0.50"
            android:gravity="right" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_content"
            android:id="@+id/food_detail_calories_value"
            android:layout_weight="0.50"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sugar"
            android:id="@+id/food_detail_sugar_name"
            android:layout_weight="0.50"
            android:gravity="right" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_content"
            android:id="@+id/food_detail_sugar_value"
            android:layout_weight="0.50"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_fats"
            android:id="@+id/food_detail_total_fats_name"
            android:layout_weight="0.50"
            android:gravity="right" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_content"
            android:id="@+id/food_detail_total_fats_value"
            android:layout_weight="0.50"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/monounsaturated"
            android:id="@+id/food_detail_monounsaturated_name"
            android:layout_weight="0.50"
            android:gravity="right" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_content"
            android:id="@+id/food_detail_monounsaturated_value"
            android:layout_weight="0.50"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cholesterol"
            android:id="@+id/food_detail_cholesterol_name"
            android:layout_weight="0.50"
            android:gravity="right" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_content"
            android:id="@+id/food_detail_cholesterol_value"
            android:layout_weight="0.50"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/protein"
            android:id="@+id/food_detail_protein_name"
            android:layout_weight="0.50"
            android:gravity="right" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_content"
            android:id="@+id/food_detail_protein_value"
            android:layout_weight="0.50"/>
    </LinearLayout>

</LinearLayout>